--- a/Substation Builder/View/MainWindowView.xaml
+++ b/Substation Builder/View/MainWindowView.xaml
@@ -14,7 +14,7 @@
 
     <Controls:MetroWindow.TitleTemplate>
         <DataTemplate>
-            <TextBlock Text="{TemplateBinding Content}" TextTrimming="CharacterEllipsis" VerticalAlignment="Center" FontSize="20px" Margin="20,0,0,0"/>
+            <TextBlock Text="{TemplateBinding Content}" TextTrimming="CharacterEllipsis" VerticalAlignment="Center" FontSize="25px" Margin="20,0,0,0"/>
         </DataTemplate>
     </Controls:MetroWindow.TitleTemplate>
 
@@ -76,7 +76,7 @@
 
                         <TextBlock Text="Select Module" FontSize="48" TextAlignment="Center" Padding="0,0,0,10"/>
                         <DockPanel>
-                            <Rectangle Margin="0" Height="{Binding ActualHeight, ElementName=tile1, Mode=OneWay}" Width="{Binding ActualHeight, ElementName=tile1, Mode=OneWay}" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Center" VerticalAlignment="Center">
+                            <Rectangle Margin="0" Height="{Binding ActualHeight, ElementName=tile3, Mode=OneWay}" Width="{Binding ActualHeight, ElementName=tile3, Mode=OneWay}" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Center" VerticalAlignment="Center">
                                 <Rectangle.RenderTransform>
                                     <TransformGroup>
                                         <ScaleTransform ScaleX="0.8" ScaleY="0.8"/>
@@ -86,11 +86,11 @@
                                     </TransformGroup>
                                 </Rectangle.RenderTransform>
                                 <Rectangle.Fill>
-                                    <VisualBrush Visual="{StaticResource appbar_clipboard_edit}" Stretch="Uniform"/>
+                                    <VisualBrush Visual="{StaticResource appbar_settings}" Stretch="Uniform"/>
                                 </Rectangle.Fill>
                             </Rectangle>
                             <Controls:Tile x:Name="tile1" Margin="5" Height="Auto" Width="Auto" HorizontalContentAlignment="Left" VerticalTitleAlignment="Center" VerticalAlignment="Center" Command="{Binding DatabaseViewOpenCommand, Mode=OneWay}">
-                                <TextBlock Margin="10,10,15,10" HorizontalAlignment="Left" VerticalAlignment="Center" FontSize="26">Project Database</TextBlock>
+                                <TextBlock Margin="10,10,15,10" HorizontalAlignment="Left" VerticalAlignment="Center" FontSize="26">Project Settings</TextBlock>
                             </Controls:Tile>
                         </DockPanel>
 
@@ -133,7 +133,7 @@
                         </DockPanel>
 
                         <DockPanel>
-                            <Rectangle Margin="0" Height="{Binding ActualHeight, ElementName=tile3, Mode=OneWay}" Width="{Binding ActualHeight, ElementName=tile3, Mode=OneWay}" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Center" VerticalAlignment="Center">
+                            <Rectangle Margin="0" Height="{Binding ActualHeight, ElementName=tile1, Mode=OneWay}" Width="{Binding ActualHeight, ElementName=tile1, Mode=OneWay}" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Center" VerticalAlignment="Center">
                                 <Rectangle.RenderTransform>
                                     <TransformGroup>
                                         <ScaleTransform ScaleX="0.8" ScaleY="0.8"/>
@@ -143,7 +143,7 @@
                                     </TransformGroup>
                                 </Rectangle.RenderTransform>
                                 <Rectangle.Fill>
-                                    <VisualBrush Visual="{StaticResource appbar_settings}" Stretch="Uniform"/>
+                                    <VisualBrush Visual="{StaticResource appbar_clipboard_edit}" Stretch="Uniform"/>
                                 </Rectangle.Fill>
                             </Rectangle>
                             <Controls:Tile x:Name="tile3" Margin="5" Height="Auto" Width="Auto" HorizontalContentAlignment="Left" VerticalAlignment="Center">
